fix: fix token for visible text in light mode

--- a/src/views/open-api-docs-preview/components/open-api-preview-inputs/open-api-preview-inputs.module.css
+++ b/src/views/open-api-docs-preview/components/open-api-preview-inputs/open-api-preview-inputs.module.css
@@ -2,7 +2,7 @@
 	--highlight-color: var(--token-color-foreground-highlight);
 	--border-width: 4px;
 
-	background: black;
+	background: var(--token-color-surface-primary);
 	border-left: var(--border-width) solid var(--highlight-color);
 	bottom: 0;
 	position: fixed;
